--- a/kubernetes/22-suricata-live.yml
+++ b/kubernetes/22-suricata-live.yml
@@ -23,11 +23,11 @@ spec:
         securityContext:
           capabilities:
             add:
-              - IPC_LOCK
+              # NET_ADMIN and NET_RAW - to turn on promiscuous mode and capture raw packets
               - NET_ADMIN
               - NET_RAW
-              - SYS_ADMIN
-              - SYS_RESOURCE
+              # SYS_NICE - to set process nice values, real-timescheduling policies, I/O scheduling
+              - SYS_NICE
         envFrom:
           - configMapRef:
               name: process-env
