--- a/kubernetes/03-opensearch.yml
+++ b/kubernetes/03-opensearch.yml
@@ -37,9 +37,9 @@ spec:
         securityContext:
           capabilities:
             add:
-              # IPC_LOCK - for OpenSearch to lock memory, preventing swapping
+              # IPC_LOCK - to lock memory, preventing swapping
               - IPC_LOCK
-              # SYS_RESOURCE - for increasing memlock limit on the node running Elasticsearch
+              # SYS_RESOURCE - for increasing memlock limits
               - SYS_RESOURCE
         ports:
           - name: opensearch
