--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,10 @@ services:
         soft: -1
         hard: -1
     cap_add:
-      # IPC_LOCK required in order for OpenSearch to lock memory, preventing swapping
+      # IPC_LOCK - to lock memory, preventing swapping
       - IPC_LOCK
+      # SYS_RESOURCE - for increasing memlock limits
+      - SYS_RESOURCE
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
@@ -136,8 +138,10 @@ services:
         soft: -1
         hard: -1
     cap_add:
-      # IPC_LOCK required in order for LogStash to lock memory, preventing swapping
+      # IPC_LOCK - to lock memory, preventing swapping
       - IPC_LOCK
+      # SYS_RESOURCE - for increasing memlock limits
+      - SYS_RESOURCE
     env_file:
       - ./config/process.env
       - ./config/ssl.env
@@ -431,8 +435,10 @@ services:
         soft: -1
         hard: -1
     cap_add:
-      # IPC_LOCK required for some of the memory optimizations netsniff-ng does
+      # IPC_LOCK - to lock memory, preventing swapping
       - IPC_LOCK
+      # SYS_RESOURCE - for increasing memlock limits
+      - SYS_RESOURCE
       # NET_ADMIN and NET_RAW - to turn on promiscuous mode and capture raw packets
       - NET_ADMIN
       - NET_RAW
