work in progress for idaholab/Malcolm#281, clean up env. variable names for arkime live capture mode

--- a/config/arkime-live.env.example
+++ b/config/arkime-live.env.example
@@ -5,11 +5,9 @@ ARKIME_COMPRESSION_TYPE=none
 ARKIME_COMPRESSION_LEVEL=0
 ARKIME_PACKET_THREADS=1
 
-# The node name (e.g., the hostname of this machine running Malcolm) to associate with
-#   network traffic metadata
-ARKIME_LIVE_NODE_NAME=malcolm
 # The node host (e.g., the IP address of the machine running Malcolm) to associate with
-#   network traffic metadata (optional, defaults to PCAP_NODE_NAME if unspecified)
+#   network traffic metadata when ARKIME_LIVE_CAPTURE is true
+#   (optional, defaults to PCAP_NODE_NAME if unspecified)
 ARKIME_LIVE_NODE_HOST=
 
 ARKIME_PCAP_PROCESSOR=false
