--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -250,6 +250,39 @@ services:
       timeout: 30s
       retries: 3
       start_period: 210s
+  arkime-live:
+    build:
+      context: .
+      dockerfile: Dockerfiles/arkime.Dockerfile
+    image: ghcr.io/idaholab/malcolm/arkime:23.12.1
+    profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
+    restart: "no"
+    stdin_open: false
+    tty: true
+    network_mode: host
+    cap_add:
+      # NET_ADMIN and NET_RAW - to turn on promiscuous mode and capture raw packets
+      - NET_ADMIN
+      - NET_RAW
+      # SYS_NICE - to set process nice values, real-time scheduling policies, I/O scheduling
+      - SYS_NICE
+    env_file:
+      - ./config.elastic/process.env
+      - ./config.elastic/ssl.env
+      - ./config.elastic/opensearch.env
+      - ./config.elastic/upload-common.env
+      - ./config.elastic/auth.env
+      - ./config.elastic/arkime.env
+      - ./config.elastic/arkime-live.env
+      - ./config.elastic/arkime-secret.env
+    volumes:
+      - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
+      - ./pcap:/data/pcap
+      - ./arkime/etc/config.ini:/opt/arkime/etc/config.orig.ini:ro
+      - ./arkime/etc/user_settings.json:/opt/arkime/etc/user_settings.json:ro
+      - ./arkime/wise/source.zeeklogs.js:/opt/arkime/wiseService/source.zeeklogs.js:ro
   zeek:
     build:
       context: .
