--- a/kubernetes/11-suricata.yml
+++ b/kubernetes/11-suricata.yml
@@ -23,6 +23,10 @@ spec:
         securityContext:
           capabilities:
             add:
+              # IPC_LOCK - to lock memory, preventing swapping
+              - IPC_LOCK
+              # SYS_RESOURCE - for increasing memlock limits
+              - SYS_RESOURCE
               # SYS_NICE - to set process nice values, real-time scheduling policies, I/O scheduling
               - SYS_NICE
         envFrom:
