idaholab/Malcolm#281, arkime capture work in progress

--- a/kubernetes/07-arkime.yml
+++ b/kubernetes/07-arkime.yml
@@ -51,6 +51,8 @@ spec:
               name: upload-common-env
           - configMapRef:
               name: arkime-env
+          - configMapRef:
+              name: arkime-offline-env
           - secretRef:
               name: arkime-secret-env
         env:
