--- a/kubernetes/23-arkime-live.yml
+++ b/kubernetes/23-arkime-live.yml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: suricata-live-deployment
+  name: arkime-live-deployment
   namespace: malcolm
 spec:
   selector:
     matchLabels:
-      name: suricata-live-deployment
+      name: arkime-live-deployment
   replicas: 1
   template:
     metadata:
       labels:
-        name: suricata-live-deployment
+        name: arkime-live-deployment
     spec:
       containers:
-      - name: suricata-live-container
-        image: ghcr.io/mmguero-dev/malcolm/suricata:23.12.1
+      - name: arkime-live-container
+        image: ghcr.io/mmguero-dev/malcolm/arkime:23.12.1
         imagePullPolicy: Always
         stdin: false
         tty: true
@@ -38,24 +38,28 @@ spec:
           - configMapRef:
               name: ssl-env
           - configMapRef:
+              name: opensearch-env
+          - secretRef:
+              name: auth-env
+          - configMapRef:
               name: upload-common-env
           - configMapRef:
-              name: suricata-env
-          - configMapRef:
-              name: suricata-live-env
-          - configMapRef:
               name: pcap-capture-env
+          - configMapRef:
+              name: arkime-env
+          - configMapRef:
+              name: arkime-live-env
+          - secretRef:
+              name: arkime-secret-env
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
-            name: suricata-live-var-local-catrust-volume
-          - mountPath: /var/log/suricata
-            name: suricata-live-suricata-logs-volume
-          - mountPath: "/opt/suricata/rules/configmap"
-            name: suricata-live-custom-rules-volume
-          - mountPath: "/opt/suricata/include-configs/configmap"
-            name: suricata-live-custom-configs-volume
+            name: arkime-live-var-local-catrust-volume
+          - mountPath: /var/local/curlrc/secretmap
+            name: arkime-live-opensearch-curlrc-secret-volume
+          - mountPath: "/data/pcap"
+            name: arkime-live-pcap-volume
       initContainers:
-      - name: suricata-live-dirinit-container
+      - name: arkime-live-dirinit-container
         image: ghcr.io/mmguero-dev/malcolm/dirinit:23.12.1
         imagePullPolicy: Always
         stdin: false
@@ -65,20 +69,17 @@ spec:
               name: process-env
         env:
           - name: PUSER_MKDIR
-            value: "/data/suricata-logs:live"
+            value: "/data/pcap:arkime-live"
         volumeMounts:
-          - name: suricata-live-suricata-logs-volume
-            mountPath: "/data/suricata-logs"
+          - name: arkime-live-pcap-volume
+            mountPath: "/data/pcap"
       volumes:
-        - name: suricata-live-var-local-catrust-volume
+        - name: arkime-live-var-local-catrust-volume
           configMap:
             name: var-local-catrust
-        - name: suricata-live-suricata-logs-volume
+        - name: arkime-live-opensearch-curlrc-secret-volume
+          secret:
+            secretName: opensearch-curlrc
+        - name: arkime-live-pcap-volume
           persistentVolumeClaim:
-            claimName: suricata-claim
-        - name: suricata-live-custom-rules-volume
-          configMap:
-            name: suricata-rules
-        - name: suricata-live-custom-configs-volume
-          configMap:
-            name: suricata-configs
+            claimName: pcap-claim
