work in progress for idaholab/Malcolm#281 (arkime capture) and idaholab/Malcolm#282 (container capabilities)

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -66,7 +66,7 @@ command=python3 /opt/pcap_arkime_processor.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
   --node "%(ENV_PCAP_NODE_NAME)s"
-  --arkime "%(ENV_ARKIME_DIR)s"/bin/capture
+  --arkime "%(ENV_ARKIME_DIR)s"/bin/capture-offline
   --autoarkime "%(ENV_ARKIME_AUTO_ANALYZE_PCAP_FILES)s"
   --forcearkime "%(ENV_ARKIME_ROTATED_PCAP)s"
   --autotag "%(ENV_AUTO_TAG)s"
