--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -24,7 +24,7 @@ command=python3 /usr/local/bin/pcap_suricata_processor.py %(ENV_PCAP_PIPELINE_VE
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
   --node "%(ENV_PCAP_NODE_NAME)s"
-  --suricata /usr/bin/suricata
+  --suricata /usr/bin/suricata-offline
   --autotag "%(ENV_AUTO_TAG)s"
   --autosuricata "%(ENV_SURICATA_AUTO_ANALYZE_PCAP_FILES)s"
   --forcesuricata "%(ENV_SURICATA_ROTATED_PCAP)s"
