work in progress for idaholab/Malcolm#281: arkime capture rules

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -45,6 +45,7 @@ readTruncatedPackets=true
 reqBodyOnlyUtf8=true
 rirFile=/opt/arkime/etc/ipv4-address-space.csv
 rotateIndex=daily
+rulesFiles=
 smtpIpHeaders=X-Originating-IP:;X-Barracuda-Apparent-Source-IP:
 spiDataMaxIndices=7
 supportSha256=false
