--- a/kubernetes/23-arkime-live.yml
+++ b/kubernetes/23-arkime-live.yml
@@ -56,6 +56,8 @@ spec:
             name: arkime-live-var-local-catrust-volume
           - mountPath: /var/local/curlrc/secretmap
             name: arkime-live-opensearch-curlrc-secret-volume
+          - mountPath: "/opt/arkime/rules"
+            name: arkime-live-rules-volume
           - mountPath: "/data/pcap"
             name: arkime-live-pcap-volume
       initContainers:
@@ -80,6 +82,9 @@ spec:
         - name: arkime-live-opensearch-curlrc-secret-volume
           secret:
             secretName: opensearch-curlrc
+        - name: arkime-live-rules-volume
+          configMap:
+            name: arkime-rules
         - name: arkime-live-pcap-volume
           persistentVolumeClaim:
             claimName: pcap-claim
