idaholab/Malcolm#309, rsyslog no longer in bookworm

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -545,6 +545,11 @@ filter {
 
     } # if ([miscbeat][syslog])
 
+    # if ([miscbeat][systemd]) {
+    #   #-------------------------------------------------
+    #   # systemd - https://docs.fluentbit.io/manual/pipeline/inputs/systemd
+    # } # if ([miscbeat][systemd])
+
     if ([miscbeat][thermal]) {
     #-------------------------------------------------
     # thermal - https://docs.fluentbit.io/manual/pipeline/inputs/thermal
