work on idaholab/Malcolm#309, rsyslog no longer in bookworm

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -545,10 +545,49 @@ filter {
 
     } # if ([miscbeat][syslog])
 
-    # if ([miscbeat][systemd]) {
-    #   #-------------------------------------------------
-    #   # systemd - https://docs.fluentbit.io/manual/pipeline/inputs/systemd
-    # } # if ([miscbeat][systemd])
+    if ([miscbeat][systemd]) {
+     #-------------------------------------------------
+     # systemd - https://docs.fluentbit.io/manual/pipeline/inputs/systemd
+
+      if ([miscbeat][systemd][source_realtime_timestamp]) {
+        # microseconds to milliseconds
+        ruby {
+          id => "ruby_miscbeat_systemd_source_realtime_timestamp_calc"
+          code => "event.set('[miscbeat][systemd][source_realtime_timestamp]', (event.get('[miscbeat][systemd][source_realtime_timestamp]').to_i / 1000)"
+        }
+        # milliseconds to date
+        date {
+          id => "date_beats_miscbeat_systemd_source_realtime_timestamp"
+          match => [ "[miscbeat][systemd][source_realtime_timestamp]", "UNIX_MS" ]
+          target => "[miscbeat][systemd][source_realtime_timestamp]"
+        }
+      }
+
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_systemd"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[miscbeat][systemd][pid]",
+                      "[miscbeat][systemd][uid]",
+                      "[miscbeat][systemd][gid]",
+                      "[miscbeat][systemd][unit]",
+                      "[miscbeat][systemd][comm]",
+                      "[miscbeat][systemd][exe]",
+                      "[miscbeat][systemd][cmdline]",
+                      "[miscbeat][systemd][machine_id]",
+                      "[miscbeat][systemd][message]",
+                      "[miscbeat][systemd][message_id]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
+      }
+
+    } # if ([miscbeat][systemd])
 
     if ([miscbeat][thermal]) {
     #-------------------------------------------------
