work on idaholab/Malcolm#309, rsyslog no longer in bookworm

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -553,7 +553,10 @@ filter {
         # microseconds to milliseconds
         ruby {
           id => "ruby_miscbeat_systemd_source_realtime_timestamp_calc"
-          code => "event.set('[miscbeat][systemd][source_realtime_timestamp]', (event.get('[miscbeat][systemd][source_realtime_timestamp]').to_i / 1000)"
+          code => "
+            event.set('[miscbeat][systemd][source_realtime_timestamp]',
+                      (event.get('[miscbeat][systemd][source_realtime_timestamp]').to_i / 1000))
+          "
         }
         # milliseconds to date
         date {
