work on idaholab/Malcolm#309, rsyslog no longer in bookworm

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -566,20 +566,61 @@ filter {
         }
       }
 
+      # rename fields according to ECS
+      # https://www.elastic.co/guide/en/ecs/current/ecs-process.html
+      # https://www.elastic.co/guide/en/ecs/current/ecs-log.html
+      mutate { id => "mutate_rename_miscbeat_systemd_log_fields"
+               # todo: translate this to CAP_BPF, CAP_SYS_ADMIN, etc.
+               rename => { "[miscbeat][systemd][cap_effective]" => "[process][thread][capabilities][effective]" }
+               rename => { "[miscbeat][systemd][cmdline]" => "[process][command_line]" }
+               rename => { "[miscbeat][systemd][code_file]" => "[log][origin][file][name]" }
+               rename => { "[miscbeat][systemd][code_func]" => "[log][origin][function]" }
+               rename => { "[miscbeat][systemd][code_line]" => "[log][origin][file][line]" }
+               rename => { "[miscbeat][systemd][comm]" => "[process][name]" }
+               rename => { "[miscbeat][systemd][exe]" => "[process][executable]" }
+               rename => { "[miscbeat][systemd][gid]" => "[process][group_leader][pid]" }
+               rename => { "[miscbeat][systemd][pid]" => "[process][pid]" }
+               rename => { "[miscbeat][systemd][syslog_facility]" => "[log][syslog][facility][code]" }
+               rename => { "[miscbeat][systemd][syslog_identifier]" => "[log][syslog][appname]" }
+               rename => { "[miscbeat][systemd][syslog_pid]" => "[log][syslog][procid]" }
+               rename => { "[miscbeat][systemd][systemd_owner_uid]" => "[process][real_user][id]" }
+               rename => { "[miscbeat][systemd][tid]" => "[process][thread][id]" }
+               rename => { "[miscbeat][systemd][uid]" => "[process][user][id]" }
+               rename => { "[miscbeat][systemd][transport]" => "[log][logger]" }
+      }
+      if ([log][syslog][facility][code]) {
+        translate {
+          id => "translate_sensor_systemd_syslog_facility_code"
+          source => "[log][syslog][facility][code]"
+          target => "[log][syslog][facility][name]"
+          dictionary_path => "/etc/syslog_facility_codes.yaml"
+        }
+      }
+
+      # store raw message text as event.original
+      if ([miscbeat][systemd][syslog_raw]) {
+        mutate { id => "mutate_rename_miscbeat_systemd_syslog_raw"
+                 rename => { "[miscbeat][systemd][syslog_raw]" => "[event][original]" } }
+      } else if ([miscbeat][systemd][message]) {
+        mutate { id => "mutate_rename_miscbeat_systemd_message"
+                 rename => { "[miscbeat][systemd][message]" => "[event][original]" } }
+      }
+
       if (![event][hash]) {
         fingerprint {
           id => "fingerprint_malcolm_miscbeat_systemd"
           source => [ "[host][name]",
                       "[event][module]",
-                      "[miscbeat][systemd][pid]",
-                      "[miscbeat][systemd][uid]",
-                      "[miscbeat][systemd][gid]",
+                      "[process][pid]",
+                      "[process][user][id]",
+                      "[process][thread][id]",
+                      "[process][group_leader][pid]",
                       "[miscbeat][systemd][unit]",
                       "[miscbeat][systemd][comm]",
                       "[miscbeat][systemd][exe]",
                       "[miscbeat][systemd][cmdline]",
                       "[miscbeat][systemd][machine_id]",
-                      "[miscbeat][systemd][message]",
+                      "[event][original]",
                       "[miscbeat][systemd][message_id]",
                       "[@timestamp]" ]
           concatenate_sources => true
