work on idaholab/Malcolm#309, rsyslog no longer in bookworm

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -548,6 +548,7 @@ filter {
     if ([miscbeat][systemd]) {
      #-------------------------------------------------
      # systemd - https://docs.fluentbit.io/manual/pipeline/inputs/systemd
+     # see also - https://www.freedesktop.org/software/systemd/man/latest/systemd.journal-fields.html
 
       if ([miscbeat][systemd][source_realtime_timestamp]) {
         # microseconds to milliseconds
@@ -604,6 +605,12 @@ filter {
       } else if ([miscbeat][systemd][message]) {
         mutate { id => "mutate_rename_miscbeat_systemd_message"
                  rename => { "[miscbeat][systemd][message]" => "[event][original]" } }
+      }
+
+      #
+      if ([miscbeat][systemd][errno]) {
+        mutate { id => "mutate_rename_miscbeat_systemd_errno"
+                 rename => { "[miscbeat][systemd][errno]" => "[event][result]" } }
       }
 
       if (![event][hash]) {
