--- a/config/suricata.env.example
+++ b/config/suricata.env.example
@@ -3,6 +3,7 @@ SURICATA_CUSTOM_RULES_ONLY=false
 SURICATA_UPDATE_RULES=false
 SURICATA_UPDATE_DEBUG=false
 SURICATA_UPDATE_ETOPEN=true
+SURICATA_DISABLE_ICS_ALL=false
 # suricata_config_populate.py can use MANY more environment variables to tweak
 #   suricata.yaml (see https://github.com/OISF/suricata/blob/master/suricata.yaml.in and
 #   https://suricata.readthedocs.io/en/latest/configuration/suricata-yaml.html).
