--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -89,6 +89,7 @@ export ZEEK_DISABLE_BEST_GUESS_ICS=true
 
 # Suricata
 export SURICATA_CUSTOM_RULES_ONLY=false
+export SURICATA_DISABLE_ICS_ALL=false
 export SURICATA_RUNMODE=workers
 export SURICATA_AF_PACKET_BLOCK_SIZE=32768
 export SURICATA_AF_PACKET_BLOCK_TIMEOUT=10
