passthrough opensearch, netbox and logstash APIs vi malcolm API

--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -177,6 +177,19 @@ http {
       proxy_set_header Authorization "";
     }
 
+    # passthrough NetBox from the Malcolm API
+    location /mapi/netbox/ {
+      limit_except GET { deny all; }
+      include /etc/nginx/nginx_auth_rt.conf;
+      proxy_pass http://netbox/netbox/api/;
+      proxy_redirect off;
+      proxy_set_header Host netbox.malcolm.local;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Remote-Auth $authenticated_user;
+    }
+
     # Malcolm API
     location /mapi {
       proxy_pass http://api;
