for idaholab/Malcolm#288, file carve download with password-protected zip file

--- a/config/zeek-secret.env.example
+++ b/config/zeek-secret.env.example
@@ -1,5 +1,7 @@
 # A VirusTotal Public API v.20 used to submit hashes of Zeek-extracted files
 VTOT_API2_KEY=0
-# Specifies the AES-256-CBC decryption password for encrypted Zeek-extracted files served over HTTP
-EXTRACTED_FILE_HTTP_SERVER_KEY=quarantined
+# Specifies the password for encrypted Zeek-extracted files served over HTTP
+#   If EXTRACTED_FILE_HTTP_SERVER_ZIP is true this is the password for the Zip file,
+#   otherwise it is the AES-256-CBC decryption password
+EXTRACTED_FILE_HTTP_SERVER_KEY=infected
 K8S_SECRET=True
