--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -49,6 +49,8 @@ EXTRACTED_FILE_UPDATE_RULES=false
 EXTRACTED_FILE_PIPELINE_VERBOSITY=
 # Whether or not to serve the directory containing Zeek-extracted over HTTP at ./extracted-files/
 EXTRACTED_FILE_HTTP_SERVER_ENABLE=false
+# Whether or not Zeek-extracted files served over HTTP will be archived in a Zip file
+EXTRACTED_FILE_HTTP_SERVER_ZIP=false
 # Whether or not Zeek-extracted files served over HTTP will be AES-256-CBC-encrypted
 EXTRACTED_FILE_HTTP_SERVER_ENCRYPT=true
 # Environment variables for tweaking Zeek at runtime (see local.zeek)
