--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -152,6 +152,7 @@ redirect_stderr=true
 [program:fileserve]
 command=/usr/local/bin/zeek_carved_http_server.py
   --port %(ENV_EXTRACTED_FILE_HTTP_SERVER_PORT)s
+  --zip %(ENV_EXTRACTED_FILE_HTTP_SERVER_ZIP)s
   --encrypt %(ENV_EXTRACTED_FILE_HTTP_SERVER_ENCRYPT)s
   --directory /zeek/extract_files
 autostart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
