landingpage work in progress (idaholab/Malcolm#252)

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -3,6 +3,12 @@
 # See also https://github.com/arkime/arkime/blob/master/release/config.ini.sample
 #
 
+# [MALCOLM_DEFAULT_NODE_NAME]
+# webBasePath=/arkime/
+#
+# [MALCOLM_DEFAULT_NODE_NAME]
+# webBasePath=/arkime/
+
 [default]
 antiSynDrop=false
 certFile=/opt/arkime/etc/viewer.crt
