--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -282,10 +282,9 @@ http {
     }
 
     # Arkime
-    location /sessions {
+    location /arkime {
       include /etc/nginx/nginx_auth_rt.conf;
-      proxy_pass https://arkime;
-      proxy_ssl_verify off;
+      proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $authenticated_user;
