--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -284,7 +284,7 @@ http {
     # Arkime
     location /arkime {
       include /etc/nginx/nginx_auth_rt.conf;
-      proxy_pass http://arkime;
+      proxy_pass https://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $authenticated_user;
