--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -168,7 +168,7 @@ http {
         set $filter_value $arg_value;
       }
 
-      rewrite ^/idark2dash/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
+      rewrite ^/idark2dash/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'arkime_sessions3-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'arkime_sessions3-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
       proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
@@ -176,7 +176,7 @@ http {
 
     # Dashboards -> Arkime shortcut
     location ~* /iddash2ark/(.*) {
-      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
+      rewrite ^.*/iddash2ark/(.*) /arkime/sessions?expression=($1) redirect;
       proxy_pass https://arkime;
       proxy_ssl_verify off;
       proxy_redirect off;
