landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -113,13 +113,6 @@ http {
       subs_filter '/fonts/glyphicons' '/auth/fonts/glyphicons' gi;
     }
 
-    # Malcolm readme
-    location /readme {
-      include /etc/nginx/nginx_auth_rt.conf;
-      root /usr/share/nginx/html;
-      try_files $uri $uri/index.html;
-    }
-
     # Malcolm file upload
     location /upload {
       include /etc/nginx/nginx_auth_rt.conf;
@@ -291,10 +284,10 @@ http {
       proxy_set_header Authorization "";
     }
 
-    # Landing Page
+    # Landing Page and README
     location / {
       include /etc/nginx/nginx_auth_rt.conf;
-      root /usr/share/nginx/landing;
+      root /usr/share/nginx/html;
       try_files $uri $uri/index.html;
     }
   }
