work in progress for idaholab/Malcolm#288

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -150,9 +150,10 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:fileserve]
-command=/usr/local/bin/zeek_carved_http_server.py
+command=/usr/local/bin/extracted_files_http_server.py
   --port %(ENV_EXTRACTED_FILE_HTTP_SERVER_PORT)s
   --zip %(ENV_EXTRACTED_FILE_HTTP_SERVER_ZIP)s
+  --recursive %(ENV_EXTRACTED_FILE_HTTP_SERVER_RECURSIVE)s
   --directory /zeek/extract_files
 autostart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
 autorestart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
