--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -51,6 +51,8 @@ EXTRACTED_FILE_PIPELINE_VERBOSITY=
 EXTRACTED_FILE_HTTP_SERVER_ENABLE=false
 # Whether or not Zeek-extracted files served over HTTP will be archived in a Zip file
 EXTRACTED_FILE_HTTP_SERVER_ZIP=false
+# HTTP server will look in subdirectories for requested filename (e.g., in "/quarantined" and "/preserved")
+EXTRACTED_FILE_HTTP_SERVER_RECURSIVE=true
 # Environment variables for tweaking Zeek at runtime (see local.zeek)
 #   Set to any non-blank value to disable the corresponding feature
 ZEEK_DISABLE_HASH_ALL_FILES=
